--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,14 +12,13 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://kit.fontawesome.com/aa08010922.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <header>
         <a href="#" class="logo">Deteccion de <span>Sigatoka Negra</span></a>
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar" class="fa fa-bars"></label>
         <nav class="navbar">
-            <a href="#wrapper">Inicio</a>
+            <a href="#wrapper">Acceder</a>
             <a href="#acercaDe">Acerca de</a>
         </nav>
     </header>
@@ -30,7 +28,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquid sequi nihil inventore in magni
                 officiis officia nesciunt, sit molestias harum id tempora quae totam ratione quaerat, consequuntur
                 accusantium culpa.</p>
-            <a href="#wrapper" class="btn-p" id="btn-p">Inicio</a>
+            <a href="#wrapper" class="btn-p" id="btn-p">Acceder</a>
         </div>
         <div class="image">
             <img src="/static/img/inteligencia-artificial (1).png" alt="">
@@ -50,7 +48,7 @@
                     <input type="password">
                     <label for="">Password</label>
                 </div>
-                <a href="#inicio" class="btn-login">Iniciar Sesion</a>
+                <a href="/templates/home.html" class="btn-login">Iniciar Sesion</a>
                 <div class="sing-link">
                     <p>No tienes una cuenta <a href="#wrapper3" class="singUp-link">Registrate</a></p>
                 </div>
@@ -79,7 +77,7 @@
                     <input type="password">
                     <label for="">Confirm Password</label>
                 </div>
-                <a href="#inicio" class="btn-login">Registrarse</a>
+                <a href="/templates/home.html" class="btn-login">Registrarse</a>
             </form>
         </div>
     </div>
