esta hecho el home hasta deteccion solo el titulo

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,9 +21,9 @@
         <input type="checkbox" id="menu-bar">
         <label for="menu-bar" class="fa fa-bars"></label>
         <nav class="navbar">
-            <a href="#">Inicio</a>
+            <a href="#inicio">Inicio</a>
             <a href="#detalle">Detalles</a>
-            <a href="#">Deteccion</a>
+            <a href="#deteccion">Deteccion</a>
             <a href="#">Contactos</a>
         </nav>
     </header>
@@ -34,7 +34,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquid sequi nihil inventore in magni
                 officiis officia nesciunt, sit molestias harum id tempora quae totam ratione quaerat, consequuntur
                 accusantium culpa.</p>
-            <a href="#detalle" class="btn-p" id="btn-p">Mas detalles</a>
+            <a href="#detalle" class="btn">Mas detalles</a>
         </div>
         <div class="image">
             <img src="/static/img/inteligencia-artificial.png" alt="">
@@ -81,6 +81,9 @@
                 <a href="#" class="btn">Ver mas</a>
             </div>
         </div>
+    </section>
+    <section class="deteccion" id="deteccion">
+        <h1 class="heinding">Detectar etapa en la que se encuentra la hoja de banano</h1>
     </section>
 </body>
 
