--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aliquid sequi nihil inventore in magni
                 officiis officia nesciunt, sit molestias harum id tempora quae totam ratione quaerat, consequuntur
                 accusantium culpa.</p>
-            <a href="#wrapper" class="btn-p" id="btn-p">Acceder</a>
+            <a href="#wrapper" class="btn">Acceder</a>
         </div>
         <div class="image">
             <img src="/static/img/inteligencia-artificial (1).png" alt="">
