--- a/templates/home.html
+++ b/templates/home.html
@@ -84,7 +84,35 @@
     </section>
     <section class="deteccion" id="deteccion">
         <h1 class="heinding">Detectar etapa en la que se encuentra la hoja de banano</h1>
+        <div class="columna">
+            <div class="image">
+                <img src="/static/img/inteligencia-artificial (1).png" alt="">
+            </div>
+            <div class="contet">
+                <h3>Uso de resnet</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam voluptate eos, repellat accusamus aliquam. Incidunt dolor rerum voluptates recusandae, iusto eius maxime, eligendi sint qui debitis aliquid, modi ipsum!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam voluptate eos, repellat accusamus aliquam. Incidunt dolor rerum voluptates recusandae, iusto eius maxime, eligendi sint qui debitis aliquid, modi ipsum!</p>
+
+                <div class="bottons">
+                    <div class="wrapper-img">
+                        <div class="image">
+                            <!-- <img src="/static/img/inteligencia-artificial.png" alt=""> -->
+                        </div>
+
+                    </div>
+                    <div class="content">
+                        <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
+                        <div class="text">No hay archivos cargados</div>
+                        <div id="cancel-btn"><i class="fas fa-times"></i></div>
+                        <div class="file-name">Nombre del archivo</div>
+                    </div>
+                    <input type="file" id="default-btn">
+                    <button id="custom-btn" class="btn">Detectar Sigatoka</button>
+                </div>
+
+            </div>
+        </div>
     </section>
 </body>
 
-</html>
+</html> 
