--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
             <a href="#inicio">Inicio</a>
             <a href="#detalle">Detalles</a>
             <a href="#deteccion">Deteccion</a>
-            <a href="#">Contactos</a>
+            <a href="#contactanos">Contactos</a>
         </nav>
     </header>
 
@@ -46,38 +46,44 @@
             <div class="caja">
                 <img src="/static/img/inteligencia-artificial.png" alt="">
                 <h3>Etapa 1</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus
+                    quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
                 <a href="#" class="btn">Ver mas</a>
             </div>
             <div class="caja">
                 <img src="/static/img/inteligencia-artificial.png" alt="">
                 <h3>Etapa 2</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus
+                    quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
                 <a href="#" class="btn">Ver mas</a>
             </div>
-        
+
             <div class="caja">
                 <img src="/static/img/inteligencia-artificial.png" alt="">
                 <h3>Etapa 3</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus
+                    quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
                 <a href="#" class="btn">Ver mas</a>
             </div>
             <div class="caja">
                 <img src="/static/img/inteligencia-artificial.png" alt="">
                 <h3>Etapa 4</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus
+                    quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
                 <a href="#" class="btn">Ver mas</a>
             </div>
             <div class="caja">
                 <img src="/static/img/inteligencia-artificial.png" alt="">
                 <h3>Etapa 5</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus
+                    quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
                 <a href="#" class="btn">Ver mas</a>
             </div>
             <div class="caja">
                 <img src="/static/img/inteligencia-artificial.png" alt="">
                 <h3>Etapa 6</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus eveniet ex voluptates accusamus
+                    quibusdam provident delectus, reprehenderit iusto consequuntur blanditiis.</p>
                 <a href="#" class="btn">Ver mas</a>
             </div>
         </div>
@@ -86,33 +92,45 @@
         <h1 class="heinding">Detectar etapa en la que se encuentra la hoja de banano</h1>
         <div class="columna">
             <div class="image">
-                <img src="/static/img/inteligencia-artificial (1).png" alt="">
+                <img src="/static/img/inteligencia-artificial.png" alt="">
             </div>
             <div class="contet">
                 <h3>Uso de resnet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam voluptate eos, repellat accusamus aliquam. Incidunt dolor rerum voluptates recusandae, iusto eius maxime, eligendi sint qui debitis aliquid, modi ipsum!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam voluptate eos, repellat accusamus aliquam. Incidunt dolor rerum voluptates recusandae, iusto eius maxime, eligendi sint qui debitis aliquid, modi ipsum!</p>
-
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aperiam voluptate eos, repellat</p>
                 <div class="bottons">
                     <div class="wrapper-img">
-                        <div class="image">
-                            <!-- <img src="/static/img/inteligencia-artificial.png" alt=""> -->
+                        <div class="image-detect">
+                            <img id="img-carga" src="">
                         </div>
-
-                    </div>
-                    <div class="content">
-                        <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
-                        <div class="text">No hay archivos cargados</div>
+                        <div class="content">
+                            <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
+                            <div class="text">No hay archivos cargados</div>
+                        </div>
                         <div id="cancel-btn"><i class="fas fa-times"></i></div>
                         <div class="file-name">Nombre del archivo</div>
                     </div>
-                    <input type="file" id="default-btn">
-                    <button id="custom-btn" class="btn">Detectar Sigatoka</button>
+                    <input type="file" id="default-btn" hidden>
+                    <div class="buttosns-actions">
+                        <button onclick="defaultBtnActivate()" id="custom-btn">Cargar una imagen</button>
+                        <button id="custom-btn">Detectar sigatoka</button>
+                    </div>
+                    
                 </div>
-
+                <div class="result">
+                    <h2>Resultado de procesar la imagen</h2>
+                    <label for="resulta">Este es un resultado quemado</label>
+                </div>
             </div>
         </div>
     </section>
+    <footer class="contactanos" id="contactanos">
+        <div class="contet">
+            
+        </div>
+    </footer>
+
+    <script src="/static/js/index.js"></script>
+
 </body>
 
-</html> 
+</html>
